--- a/package.json
+++ b/package.json
@@ -1,28 +1,22 @@
 {
-  "name": "nuxt-app",
+  "name": "portfolio",
   "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@vueuse/motion": "^2.1.0",
-    "nuxt": "^3.11.2",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "aos": "^3.0.0-beta.6",
+    "nuxt-aos": "^1.2.4",
+    "sass": "^1.77.2",
+    "typescript": "^5.4.5",
+    "vue": "^3.4.21"
   },
   "devDependencies": {
-    "@nuxt/eslint": "^0.3.10",
-    "eslint": "^8.57.0",
-    "nuxt-aos": "^1.2.4",
-    "push-dir": "^0.4.1",
-    "sass": "^1.75.0",
-    "typescript": "^5.4.5",
-    "vue-tsc": "^1.8.27"
+    "@vitejs/plugin-vue": "^5.0.4",
+    "vite": "^5.2.0"
   }
 }
